--- a/m4/html/index.css
+++ b/m4/html/index.css
@@ -48,16 +48,7 @@
   
   }
 
-  
-  td img{
-    width: 36px;
-    height: 36px;
-    margin-right: .5rem;
-    border-radius: 50%;
-    vertical-align: middle;
-  
-  }
-  
+ 
   table, th, td{
     font-size: 1.3em;
     border-collapse: collapse;
@@ -74,7 +65,7 @@
   }
   
   tbody tr:nth-child(even) {
-    background-color: #ff8c00; 
+    background-color: rgb(230, 134, 9); 
   }
   
   
@@ -88,12 +79,12 @@
     font-size: 4.1em;
     font-weight: bold; 
     text-align: center;
-    color: #ff2a00; 
+    color: rgb(241, 18, 10); 
   }
   h5{
     font-family: Algerian, serif;
     font-size: 2.1em;
     font-weight: bold; 
     text-align: center;
-    color: #ff2a00; 
+    color: rgb(241, 18, 10);  
   }
