--- a/m4/html/index.css
+++ b/m4/html/index.css
@@ -18,37 +18,16 @@
     
    }
   
-  main.table {
+  table {
     
-    width:82vw;
+    width:90vw;
     height: 90vh;
     background-color: #fff5;
-    box-shadow: 0 .4rem .8rem #0005;
-    border-radius: .8rem;
+    border-radius: .3rem;
     overflow: hidden;
-    
+    margin:20px auto;
   }
   
-  .table_header {
-    width: 100%;
-    height: 10%;
-    background-color: #fff4;
-    padding: .8rem 1rem;
-    padding-bottom: 100px;
-  }
-  
-  
-  .table_body {
-    width: 95%;
-    max-height: calc(89% - 1.6rem);
-    margin: .8rem auto;
-    border-radius: .6rem;
-    overflow: auto;
-    justify-content: center;
-  
-  }
-
- 
   table, th, td{
     font-size: 1.3em;
     border-collapse: collapse;
